--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
 					<!-- MainClass in manifest make a executable jar -->
 					<archive>
 						<manifest>
-							<mainClass>io.vedder.ml.markov.Main</mainClass>
+							<mainClass>io.vedder.ml.markov.ExampleMain</mainClass>
 						</manifest>
 					</archive>
 
